force-app/main/default/objects/Temporal_Program_Enrolment__c/Temporal_Program_Enrolment__c.object-meta.xml
<CustomObject>
    <label>Temporal Program Enrolment</label>
    <nameField>
        <label>Temporal Program Enrolment</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temporal Program Enrolments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>