force-app/main/default/objects/Temporal_Program_Enrolment__c/fields/Detalle_Error__c.field-meta.xml
<CustomField>
    <fullName>Detalle_Error__c</fullName>
    <label>Detalle Error</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Socio No encontrado</fullName>
            </value>
            <value>
                <fullName>Actividad No Encontrada</fullName>
            </value>
            <value>
                <fullName>No encontradas ambos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>