force-app/main/default/objects/Temporal_Program_Enrolment__c/fields/Entidad__c.field-meta.xml
<CustomField>
    <fullName>Entidad__c</fullName>
    <label>Entidad</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Matriculas</fullName>
            </value>
            <value>
                <fullName>Encuadramientos</fullName>
            </value>
            <value>
                <fullName>Regatas</fullName>
            </value>
            <value>
                <fullName>Eventos</fullName>
            </value>
            <value>
                <fullName>Cesiones</fullName>
            </value>
            <value>
                <fullName>Bautismos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>