force-app/main/default/objects/Temporal_Program_Enrolment__c/fields/MM_ano__c.field-meta.xml
<CustomField>
    <fullName>MM_ano__c</fullName>
    <label>MM_ano</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>