force-app/main/default/objects/Temporal_Program_Enrolment__c/fields/Ocupacion__c.field-meta.xml
<CustomField>
    <fullName>Ocupacion__c</fullName>
    <label>Ocupacion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ocupacion</valueSetName>
    </valueSet>
</CustomField>