force-app/main/default/objects/Temporal_Program_Enrolment__c/fields/Program_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Program_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Enrollment</label>
    <referenceTo>ProgramEnrollment</referenceTo>
    <relationshipLabel>Temporal Program Enrolments</relationshipLabel>
    <relationshipName>Temporal_Program_Enrolments</relationshipName>
    <type>Lookup</type>
</CustomField>